--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Know Your Fan - Análise</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style-menu.css">
+  <link rel="stylesheet" href="/css/style-menu.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -60,7 +60,7 @@
 
       <!-- Camisa Oficial -->
       <div class="recommendation-card d-flex align-items-center mb-3 p-3 rounded" onclick="window.location.href='https://www.furia.gg/produtos/vestuario/camisetas?gad_source=1&gclid=EAIaIQobChMIt_qg7of7jAMVpipECB0Vlg13EAAYASAAEgIGR_D_BwE'" style="cursor:pointer;">
-        <img src="../data/camisa-icon.png" class="icon me-3" alt="Ícone camisa">
+        <img src="/data/camisa-icon.png" class="icon me-3" alt="Ícone camisa">
         <div>
           <strong>Camisa Oficial</strong><br>
           <small class="text-muted">Desconto de 23% na loja</small>
@@ -69,7 +69,7 @@
 
       <!-- Evento ao vivo -->
       <div class="recommendation-card d-flex align-items-center mb-3 p-3 rounded" onclick="window.open('https://www.twitch.tv/furiatv', '_blank')" style="cursor: pointer;">
-        <img src="../data/agenda-icon.png" class="icon me-3" alt="Ícone evento">
+        <img src="/data/agenda-icon.png" class="icon me-3" alt="Ícone evento">
         <div>
           <strong>Evento ao vivo</strong><br>
           <small class="text-muted">Assista no canal da FURIA</small>
@@ -78,7 +78,7 @@
 
       <!-- Twitter Oficial -->
       <div class="recommendation-card d-flex align-items-center mb-3 p-3 rounded" onclick="window.open('https://twitter.com/FURIA', '_blank')" style="cursor: pointer;">
-        <img src="../data/logo-x.png" class="icon me-3" alt="Ícone Twitter">
+        <img src="/data/logo-x.png" class="icon me-3" alt="Ícone Twitter">
         <div>
           <strong>Rede Oficial</strong><br>
           <small class="text-muted">@FURIA — Últimas novidades</small>
@@ -89,6 +89,6 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 </html>
