--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link href="/css/style.css" rel="stylesheet"> 
+    <link href="css/style.css" rel="stylesheet"> 
     <title>Main</title>
 </head>
 <body>
@@ -34,8 +34,8 @@
           </div>
         </div> 
 
-        <img src="/data/furia-nome.png" class="furia-nome">
-        <img src="/data/background-furia.png" class="furia-bg" alt="fundo da Furia">
+        <img src="data/furia-nome.png" class="furia-nome">
+        <img src="data/background-furia.png" class="furia-bg" alt="fundo da Furia">
         <div class="input-container">
             <div class="d-flex flex-column align-items-center">
                 <button class="btn btn-outline-light button-perfil" type="button" data-bs-toggle="collapse" data-bs-target="#collapseInput" aria-expanded="false" aria-controls="collapseInput">
@@ -51,12 +51,12 @@
                 </div>
               </div>
         </div>
-        <img src="/data/logo-x.png" class="x-logo" alt="logo do X">
+        <img src="data/logo-x.png" class="x-logo" alt="logo do X">
         <header class="header-main">
             <h5>Powered by Know Your Fan</h5>
         </header> 
     </div>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
-    <script src="/js/script-index.js"></script>
+    <script src="js/script-index.js"></script>
 </body>
 </html>
